2009-10-19  Mark Wielaard  <mjw@redhat.com>

	* patches/icedtea-systemtap.patch: Add fix for GetObjectArrayElement
	return probe ret value.

2009-10-14  Mark Wielaard  <mjw@redhat.com>

	* configure.ac: When enabling systemtap support check sys/sdt.h
	and g++ are recent enough to allow probes in class constructors
	and destructors.
	* patches/icedtea-systemtap.patch: Enable compiling probes in
	jni.cpp. Rewrite Set<prim>Field and SetStatic<prim>Field macros
	to use DTRACE_PROBE interface directly instead of generating
	dtrace implementation calls. Clean up dtrace.hpp.
	* tapset/hotspot.stp.in: Enable hotspot.monitor_notify. Fix up
	comments.

2009-10-13  Mark Wielaard  <mjw@redhat.com>

	* tapsets/hotspot.stp.in (hotspot.gc_end): Match gc__end, not begin.

2010-05-05 Andrew John Hughes  <ahughes@redhat.com>

	Bump to b89.
	* patches/icedtea-fonts.patch:
	Removed, applied upstream.
	* Makefile.am:
	Bump to b89 changesets.  Remove fonts patch.
	* generated/sun/nio/cs/ext/HKSCS_XPMapping.java,
	* generated/sun/nio/cs/ext/MS950.java:
	Add new generated files required by rt-class-files.stamp.
	* patches/boot/demos.patch:
	Recreated due to changes for module build.
	* patches/boot/ecj-diamond.patch:
	Add additional files using the <> operator.
	* patches/boot/icedtea-dbcs.patch:
	Updated due to change from GenerateDBCS to DBCS.
	* patches/boot/icedtea-dyn.patch:
	Recreated due to changes for module build.
	* patches/boot/icedtea-sbcs.patch:
	Updated due to change from GenerateSBCS to SBCS.
	* patches/boot/xbootclasspath.patch:
	Recreated due to changes for module build.
	* patches/hotspot/default/icedtea-params-cast-size_t.patch,
	* patches/hotspot/default/icedtea-shark-build.patch:
	Rerolled against new HotSpot.
	* patches/icedtea-liveconnect.patch,
	* patches/icedtea-rhino.patch:
	Recreated due to changes for module build.

2010-04-26 Andrew John Hughes  <ahughes@redhat.com>

	Make sure correct classpaths are used by pre-build